--- a/bodo/css/style.css
+++ b/bodo/css/style.css
@@ -472,6 +472,7 @@ p {
   letter-spacing: 1.5px;
   margin: 0 auto;
   opacity: 0.6;
+  /* min-height: 50px; */
 }
 .year {
   font-size: 26px;
@@ -529,15 +530,15 @@ p {
   left: 50%;
   top: 50%;
   padding: 65px;
-  background: rgba(255, 255, 255, 0.8);
-  outline: 4px double #FFFFFF;
+  /* background: rgba(255, 255, 255, 0.8); */
+  /* outline: 4px double #FFFFFF; */
   outline-offset: 8px;
   -webkit-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
 }
 
 /*mouse*/
-.mouse-icon {
+/* .mouse-icon {
   position: absolute;
   border: 2px solid #2f2f2f;
   background: #ffffff;
@@ -576,6 +577,48 @@ p {
   top: 4px;
   margin-left: auto;
   margin-right: auto;
+} */
+
+.mouse-icon .scroll {
+  position: absolute;
+  bottom: 75px;
+  left: 50%;
+  width: 24px;
+  height: 24px;
+  margin-left: -12px;
+  border-left: 3px solid #000;
+  border-bottom: 3px solid #000;
+  -webkit-transform: rotateZ(-45deg);
+  transform: rotateZ(-45deg);
+  -webkit-animation: sdb06 1.5s infinite;
+  animation: sdb06 1.5s infinite;
+  box-sizing: border-box;
+}
+@-webkit-keyframes sdb06 {
+  0% {
+    -webkit-transform: rotateY(0) rotateZ(-45deg) translate(0, 0);
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: rotateY(720deg) rotateZ(-45deg) translate(-20px, 20px);
+    opacity: 0;
+  }
+}
+@keyframes sdb06 {
+  0% {
+    transform: rotateY(0) rotateZ(-45deg) translate(0, 0);
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    transform: rotateY(720deg) rotateZ(-45deg) translate(-20px, 20px);
+    opacity: 0;
+  }
 }
 
 @-webkit-keyframes scrolling  {
@@ -934,13 +977,16 @@ ul.portfolio-image li .desc{
   min-height: 480px;
 }
 .wrap-about .w-content{
-  position: absolute;
+  /* position: absolute;
   left: 50%;
   top: 50%;
-  transform: translateX(-50%) translateY(-50%);
-  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%); */
+  /* -webkit-transform: translateX(-50%) translateY(-50%);
   -moz-transform: translateX(-50%) translateY(-50%);
-  -ms-transform: translateX(-50%); 
+  -ms-transform: translateX(-50%);  */
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 400px;
 }
 
 .wrap-about .w-content td{
