--- a/bodo/css/style.css
+++ b/bodo/css/style.css
@@ -78,9 +78,8 @@ iframe {
   border: none;
   width: 100%;
 }
-img { max-width: 100%; }
-*:focus {
-  outline: none;
+img { 
+  max-width: 100%;
 }
 
 /*----------------------------------------- 2) Preloader --------------------------------------------------*/
@@ -530,7 +529,7 @@ p {
   left: 50%;
   top: 50%;
   padding: 65px;
-  /* background: rgba(255, 255, 255, 0.8); */
+  background: rgba(255, 255, 255, 0.8);
   /* outline: 4px double #FFFFFF; */
   outline-offset: 8px;
   -webkit-transform: translateX(-50%) translateY(-50%);
@@ -660,20 +659,21 @@ ul.portfolio-image li:hover {
   cursor: pointer;
 }
 ul.portfolio-image li:hover img {
-  -webkit-filter: grayscale(20%);
-  transform: scale(1.15);
+  /* -webkit-filter: grayscale(0%); */
+  /* transform: scale(1.15); */
 }
 ul.portfolio-image li:hover .image-bg {opacity: 1;}
 ul.portfolio-image li:hover .description-wrap {
   background: rgba(186, 186, 186, 0.6);
 }
 ul.portfolio-image li img {
+  object-fit: cover;
   position: absolute;
   width: 100%;
   height: 100%;
   left: 0;
   top: 0;
-  -webkit-filter: grayscale(100%);
+  /* -webkit-filter: grayscale(100%); */
   transition: filter, transform, 0.5s;
 }
 ul.portfolio-image li .decription-wrap {
@@ -688,8 +688,8 @@ ul.portfolio-image li .decription-wrap {
 }
 ul.portfolio-image li .image-bg {
   color: #2f2f2f;
-  background: #ffffff;
-  background: rgba(255, 255, 255, 0.9);
+  /* background: #ffffff; */
+  /* background: rgba(255, 255, 255, 0.9); */
   font-size: 14px;
   text-transform: uppercase;
   width: 100%;
