--- a/bodo/css/responsive.css
+++ b/bodo/css/responsive.css
@@ -97,7 +97,7 @@
 
 @media screen and (min-width: 1024px){
 	.content-right {
-	  margin-top: 20px;
-	  padding: 0 20px 0 60px; 
+	  /* margin-top: 20px; */
+	  padding: 0 40px 0 40px; 
 	}
 }
