--- a/bodo/css/style.css
+++ b/bodo/css/style.css
@@ -145,7 +145,7 @@ img {
 /*----- background ------*/
 .grey-bg {
   background: #f6f6f6;
-  padding: 120px 0;
+  padding: 80px 0 40px 0;
   display: block;
 }
 .white-bg {
@@ -230,7 +230,7 @@ img {
 }
 .content {
   position: relative;
-  max-width: 1500px;
+  max-width: 1400px;
   /* width: 100%; */
   margin: 0 auto;
   height: 100%;
@@ -474,6 +474,7 @@ p {
   /* min-height: 50px; */
 }
 .year {
+  color: #2f2f2f;
   font-size: 26px;
   font-weight: 500;
   margin-bottom: 10px;
@@ -747,6 +748,9 @@ ul.portfolio-image li .desc{
   margin-bottom: 60px;
 }
 /*---------- c. experience -----------*/
+.card-row {
+  height: 100%;
+}
 .wrap-card {
   position: relative;
   box-shadow: 0px 0px 0px #818181;
@@ -788,6 +792,7 @@ ul.portfolio-image li .desc{
   padding: 30px 35px 45px 35px;
   margin-bottom: 30px;
   border: 1px solid rgba(129, 129, 129, 0.1);
+  height: 100%;
 }
 .card:before,
 .card:after {
