--- a/css/style.css
+++ b/css/style.css
@@ -254,6 +254,19 @@ img {
   transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
 }
 /* Menu Button */
+.norm-button {
+  width: 200px;
+  height: 50px;
+  z-index: 1000;
+  cursor: pointer;
+  background: transparent;
+  border: solid 1px;
+  border-radius: 5px;
+  margin-top:5px;
+}
+.norm-button:hover {
+  opacity: 0.5;
+}
 .menu-button {
   width: 34px;
   height: 45px;
